// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@tablecheck/tablekit-button - default-behaviour isLoading should set the iconAfter opacity to 0 when isLoading 1`] = `
Array [
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

<span
    className="emotion-0 emotion-1"
  >
    <Icon
      size="regular"
    >
      <span
        className="icon"
      />
    </Icon>
  </span>,
  <span
    className="icon"
  />,
]
`;

exports[`@tablecheck/tablekit-button - default-behaviour isLoading should set the iconBefore opacity to 0 when isLoading 1`] = `
Array [
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

<span
    className="emotion-0 emotion-1"
  >
    <Icon
      size="regular"
    >
      <span
        className="icon"
      />
    </Icon>
  </span>,
  <span
    className="icon"
  />,
]
`;

exports[`@tablecheck/tablekit-button - default-behaviour isLoading should set the opacity of the text to 0 when isLoading is true 1`] = `
.emotion-0 {
  margin: 0 0 0 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 600;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0;
}

<span
  className="emotion-0 emotion-1"
>
  Some text
</span>
`;

exports[`@tablecheck/tablekit-button - default-behaviour isLoading should set the opacity of the text to undefined when isLoading is false 1`] = `
.emotion-0 {
  margin: 0 0 0 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-weight: 600;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

<span
  className="emotion-0 emotion-1"
>
  Some text
</span>
`;
